@@ -1,3 +1,8 @@
+2001-09-22  Bradford Hovinen  <hovinen@ximian.com>
+
+	* bonobo-config-archiver.c (notify_listeners): Abort if the object
+	is already destroyed
+
 2001-09-07  Bradford Hovinen  <hovinen@ximian.com>
 
 	* archiver-client.c (location_client_store_xml): Make backend_id
